# uaproject-backend-pylibrary

./: .gitignore  README.md  pyproject.toml
.github/workflows/: notify.yml
uap_backend/: __init__.py  config.py  exceptions.py  logger.py
uap_backend/applications/: crud.py  schemas.py
uap_backend/balances/: crud.py  schemas.py
uap_backend/base/: crud.py  schemas.py
uap_backend/core/: __init__.py  client.py  config.py  errors.py
uap_backend/cruds/: __init__.py  applications.py  balances.py  base.py  files.py  punishments.py  purchases.py  roles.py  services.py  transactions.py  users.py  webhooks.py
uap_backend/cruds/payments/: balances.py  donations.py  purchases.py  services.py  transactions.py  trasnsactions.py
uap_backend/payments/: crud.py  schemas.py
uap_backend/payments/balances/: balances.py  crud.py  models.py  schemas.py
uap_backend/payments/donations/: crud.py  donations.py  models.py  schemas.py
uap_backend/payments/payment_methods/: payment_methods.py  schemas.py
uap_backend/payments/purchases/: models.py  purchases.py  schemas.py
uap_backend/payments/services/: crud.py  models.py  schemas.py  services.py
uap_backend/payments/transactions/: crud.py  models.py  payload.py  schemas.py  transactions.py
uap_backend/transactions/: crud.py  schemas.py
uap_backend/users/: __init__.py  crud.py  schemas.py
uap_backend/webhooks/: __init__.py  crud.py  decorators.py  handlers.py  registry.py  schemas.py
