[tool.poetry]
name = "uap-backend"
version = "0.1.0"
description = ""
authors = ["THEROER <theroer09@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic-settings = "^2.7.1"
aiohttp = "^3.11.11"
fastapi = "^0.115.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
