[tool.poetry]
name = "uap-backend"
version = "0.1.0"
description = ""
authors = ["THEROER <theroer09@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic-settings = "^2.7.1"
aiohttp = "^3.11.11"
fastapi = "^0.115.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
select = ["E", "F", "W", "C", "I"]
exclude = ["venv", "__pycache__", "versions"]
ignore = ["E501", "B010", "B022", "B028", "B904"]
line-length = 100

[tool.vulture]
exclude = ["*.ini", "Dockerfile", "*.lock", "*.toml"]
ignore_decorators = []
ignore_names = ["model_config"]
# make_whitelist = true
min_confidence = 80
paths = ["*"]
sort_by_size = true
# verbose = true
